--- a/examples/lorenz.ipynb
+++ b/examples/lorenz.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where the upper plot is the observble data, and the lower is the hidden processes. Next, we shall perform the inference. We use the NESS as the main to target the parameters. However, since the model has purely additive noise (rather than multiplicative) in the observational process, we may use the `Unscented Kalman Filter` to target the latent process. Such that we get"
+    "Where the upper plot is the observble data, and the lower is the hidden processes. Next, we shall perform the inference. We use the NESS to target the parameters. However, since the model has purely additive noise (rather than multiplicative) in the observational process, we may use the `Unscented Kalman Filter` to target the latent process. Such that we get"
    ]
   },
   {
