Small update of demo

--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -9,10 +9,10 @@
     "# Stochastic volatility\n",
     "This Notebook demos how to construct a stochastic volatility model and fit it to data. We will use the precision model of G. Chacko and L. M. Viceira. `Dynamic consumption and portfolio choice with stochastic volatility in incomplete markets` given by\n",
     "\\begin{cases}\n",
-    "\\mathrm{d}Y_t = \\left (\\mu + \\beta e^{-V_t} \\right ) \\mathrm{d}t + e^{-V_t/2} \\mathrm{d}W_t, \\\\\n",
+    "Y_t = \\mu + \\beta e^{-V_t} + e^{-V_t/2} W_t, \\\\\n",
     "\\mathrm{d}V_t = \\kappa \\left (\\gamma - V_t \\right ) \\mathrm{d}t + \\sigma \\mathrm{d}B_t, \\\\\n",
     "\\end{cases}\n",
-    "where $\\mu, \\beta, \\gamma \\in \\mathbb{R}$, and $\\kappa, \\sigma \\in \\mathbb{R}_+$. $\\{W_t\\}$ and $\\{V_t\\}$ are two one-dimensional, assumed independent, Wiener processes. As the above model is defined in continuous time, we need to discretize it; we do so using the Euler-Maruyma scheme.\n",
+    "where $\\mu, \\beta, \\gamma \\in \\mathbb{R}$, and $\\kappa, \\sigma \\in \\mathbb{R}_+$.$\\{V_t\\}$ is a one-dimensional, assumed independent, Wiener processes, wheras $\\{W_t\\}$ is assumed to follow a central Student's $t$ distribution with $\\nu$ degrees of freedom. \n",
     "\n",
     "We begin with importing the necessary libraries for defining the model."
    ]
@@ -23,18 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyfilter.timeseries import StateSpaceModel, OrnsteinUhlenbeck, Observable"
+    "from pyfilter.timeseries import StateSpaceModel, OrnsteinUhlenbeck, Observable, Parameter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define the governing dynamics. We assume that the initial distribution of the model is given by \n",
-    "\\begin{equation}\n",
-    "V_0 \\sim \\mathcal{N} \\left ( \\gamma, \\frac{\\sigma}{\\sqrt{2 \\kappa}} \\right ),\n",
-    "\\end{equation}\n",
-    "so that we get the following functions (and activating CUDA since I have a GTX 1070)"
+    "Next, we define the governing dynamics, and activate CUDA"
    ]
   },
   {
@@ -64,7 +60,8 @@
     "    \\gamma \\sim \\mathcal{N}(0, 1), \\\\\n",
     "    \\mu, \\beta \\sim \\mathcal{N}(0, 0.5), \\\\\n",
     "    \\kappa, \\sim \\mathcal{E}(10), \\\\\n",
-    "    \\sigma \\sim \\mathcal{E}(5).\n",
+    "    \\sigma \\sim \\mathcal{E}(5), \\\\\n",
+    "    \\nu \\sim \\mathcal{E}(0.1).\n",
     "\\end{cases}\n",
     "To do this, we need to import the necessary distributions."
    ]
@@ -91,8 +88,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyfilter.timeseries import Parameter\n",
-    "\n",
     "logvol = OrnsteinUhlenbeck(Exponential(10.), Normal(0., 1.), Exponential(5), ndim=1, dt=1.)\n",
     "obs = Observable((go, fo), (Normal(0., 0.5), Normal(0., 0.5)), StudentT(Parameter(Exponential(0.1))))\n",
     "\n",
@@ -268,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot a crude estimate of the underlying volatility."
+    "Let's plot a crude estimate of the underlying volatility. I say crude here because we uniformly weight the trajectories."
    ]
   },
   {
