--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -12,7 +12,7 @@
     "Y_t = \\mu + \\beta e^{-V_t} + e^{-V_t/2} W_t, \\\\\n",
     "\\mathrm{d}V_t = \\kappa \\left (\\gamma - V_t \\right ) \\mathrm{d}t + \\sigma \\mathrm{d}B_t, \\\\\n",
     "\\end{cases}\n",
-    "where $\\mu, \\beta, \\gamma \\in \\mathbb{R}$, and $\\kappa, \\sigma \\in \\mathbb{R}_+$.$\\{V_t\\}$ is a one-dimensional, assumed independent, Wiener processes, wheras $\\{W_t\\}$ is assumed to follow a central Student's $t$ distribution with $\\nu$ degrees of freedom. \n",
+    "where $\\mu, \\beta, \\gamma \\in \\mathbb{R}$, and $\\kappa, \\sigma \\in \\mathbb{R}_+$.$\\{V_t\\}$ is a one-dimensional Wiener processes, wheras $\\{W_t\\}$ is assumed to follow a central Student's $t$ distribution with $\\nu$ degrees of freedom. \n",
     "\n",
     "We begin with importing the necessary libraries for defining the model."
    ]
