--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now fit the model to the data"
+    "Let's now fit the model to the data. We set the handshake to 3500 to let SMC$^2$ target the majority of the data."
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we plot the posterior distributions"
+    "Next, we plot the posterior distributions. The first three correspond to the reversion, mean and standard deviation of the latent process. The last three correspond to the level, exposure to volatility and dof of the observable model. Comparing $\\nu$ to the posterior of [PyMC3](https://docs.pymc.io/notebooks/stochastic_volatility.html), we see that they are rather similar."
    ]
   },
   {
