--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -59,7 +59,7 @@
     "\\begin{cases}\n",
     "    \\gamma \\sim \\mathcal{N}(0, 1), \\\\\n",
     "    \\mu, \\beta \\sim \\mathcal{N}(0, 0.5), \\\\\n",
-    "    \\kappa, \\sim \\mathcal{E}(10), \\\\\n",
+    "    \\kappa \\sim \\mathcal{E}(10), \\\\\n",
     "    \\sigma \\sim \\mathcal{E}(5), \\\\\n",
     "    \\nu \\sim \\mathcal{E}(0.1).\n",
     "\\end{cases}\n",
