--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to fit the model to the given data, we need an algorithm. We shall use a combination of NESS and SMC$^2$. We use SMC$^2$ for the first part of the data set, and then switch to NESS. Furthermore, since we are using particle filters, we need to decide on which proposal to use - should we go with the Bootstrap or something more advanced? For this example, we will use a linearized version. Importing the relevant classes, we get"
+    "In order to fit the model to the given data, we need an algorithm. We shall use a combination of NESS and SMC$^2$. We use SMC$^2$ for the first part of the data set, and then switch to NESS. Furthermore, since we are using particle filters, we need to decide on which proposal to use - should we go with the Bootstrap or something more advanced? For this example, we will use a Bootstrap version. Importing the relevant classes, we get"
    ]
   },
   {
@@ -198,7 +198,6 @@
    ],
    "source": [
     "from pyfilter.resampling import multinomial\n",
-    "from pyfilter.proposals import Linearized\n",
     "\n",
     "predictions = 10\n",
     "training = torch.tensor(y.values, dtype=torch.float32)\n",
