Uses new module

--- a/examples/nutria.ipynb
+++ b/examples/nutria.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "from pyfilter.algorithms import SMC2\n",
+    "from pyfilter.inference import SMC2\n",
     "from pyfilter.filters import APF\n",
     "from pyfilter.resampling import multinomial\n",
     "import numpy as np\n",
