--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyfilter.algorithms import SMC2FW\n",
+    "from pyfilter.inference import SMC2FW\n",
     "from pyfilter.filters import SISR"
    ]
   },
