--- a/examples/lorenz.ipynb
+++ b/examples/lorenz.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "from pyfilter.algorithms import NESS, kernels\n",
+    "from pyfilter.inference import NESS\n",
     "from pyfilter.filters import UKF\n",
     "\n",
     "hidden = EulerMaruyama((f, g), (Uniform(5, 40), Uniform(10, 50), Uniform(1, 20)), init_dist, inc, dt=dt, num_steps=10)\n",
