--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyfilter.algorithms import SMC2FW\n",
+    "from pyfilter.inference import SMC2FW\n",
     "from pyfilter.filters import SISR"
    ]
   },
@@ -197,7 +197,6 @@
    ],
    "source": [
     "from pyfilter.resampling import multinomial\n",
-    "from pyfilter.algorithms.kernels import AdaptiveKernel\n",
     "\n",
     "predictions = 10\n",
     "training = torch.from_numpy(y.values[:-predictions]).float().cuda()\n",
@@ -216,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we plot the posterior distributions. The first three correspond to the reversion, mean and standard deviation of the latent process. The last three ones correspond to the mean, exposure to variance and dof of the Student's t distribution."
+    "Next, we plot the posterior distributions. The first corresponds to the standard deviation of the latent process. The last three ones correspond to the mean, exposure to variance and dof of the Student's t distribution."
    ]
   },
   {
@@ -241,7 +240,6 @@
    ],
    "source": [
     "from pyfilter.utils import normalize\n",
-    "import pandas as pd\n",
     "\n",
     "fig, ax = plt.subplots(len(alg.filter.ssm.theta_dists), figsize=(16, 9))\n",
     "\n",
