--- a/examples/lorenz.ipynb
+++ b/examples/lorenz.ipynb
@@ -207,8 +207,8 @@
     "states = ['State 1', 'State 2', 'State 3']\n",
     "pd.DataFrame(x[-100:].numpy(), columns=states).plot(ax=ax)\n",
     "\n",
-    "for _, alg in algs:\n",
-    "    pd.DataFrame(alg.filter.result.filter_means.mean(dim=1)[-100:].numpy(), columns=[f'Filtered {s}' for s in states]).plot(ax=ax)"
+    "for state, _ in algs:\n",
+    "    pd.DataFrame(state.filter_state.filter_means.mean(dim=1)[-100:].numpy(), columns=[f'Filtered {s}' for s in states]).plot(ax=ax)"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
