--- a/examples/nutria.ipynb
+++ b/examples/nutria.ipynb
@@ -166,8 +166,8 @@
     "\n",
     "data.plot(ax=ax)\n",
     "\n",
-    "for _, alg in algs:\n",
-    "    ax.plot(alg.filter.result.filter_means.mean(dim=1).exp().cpu().numpy(), label='Filtered')\n",
+    "for state, _ in algs:\n",
+    "    ax.plot(state.filter_state.filter_means.mean(dim=1).exp().cpu().numpy(), label='Filtered')\n",
     "\n",
     "ax.legend()"
    ]
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
