--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -288,7 +288,7 @@
     "\n",
     "indx = y.index[:training.shape[0]]\n",
     "for state, alg in algs:\n",
-    "    asdf = pd.DataFrame(alg.filter.result.filter_means.exp().cpu().numpy(), index=indx).mean(1)    \n",
+    "    asdf = pd.DataFrame(state.filter_state.filter_means.exp().cpu().numpy(), index=indx).mean(1)    \n",
     "    asdf.loc[trunc.index].plot(alpha=0.75, ax=ax)"
    ]
   },
@@ -397,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
