Not entirely correct notebook, but kinda correct

--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyfilter.timeseries import StateSpaceModel, models as m, AffineObservations, Parameter"
+    "from pyfilter.timeseries import StateSpaceModel, models as m, AffineObservations, Parameter, DistributionBuilder"
    ]
   },
   {
@@ -89,8 +89,9 @@
    "outputs": [],
    "source": [
     "logvol = m.OrnsteinUhlenbeck(Exponential(10.), Normal(0., 1.), Exponential(5.), ndim=1, dt=1.)\n",
-    "nu = Parameter(Exponential(0.1))\n",
-    "obs = AffineObservations((go, fo), (Normal(0., 1.),), StudentT(nu))\n",
+    "\n",
+    "student_t = DistributionBuilder(StudentT, df=Parameter(Exponential(0.1)))\n",
+    "obs = AffineObservations((go, fo), (Normal(0., 1.),), student_t)\n",
     "\n",
     "stockmodel = StateSpaceModel(logvol, obs)"
    ]
@@ -239,20 +240,22 @@
    ],
    "source": [
     "from pyfilter.utils import normalize\n",
+    "from arviz import plot_posterior\n",
     "\n",
-    "fig, ax = plt.subplots(len(alg.filter.ssm.theta_dists), figsize=(16, 9))\n",
+    "fig, ax = plt.subplots(len(alg.filter.ssm.trainable_parameters), figsize=(16, 9))\n",
     "\n",
     "syms = '\\\\kappa, \\\\gamma, \\\\sigma, \\\\mu, \\\\nu'.split(',')\n",
+    "colors = [\"lightblue\", \"orange\"]\n",
     "\n",
     "for r, (state, alg) in enumerate(algs):    \n",
     "    w = normalize(state.w)\n",
     "    \n",
-    "    for i, param in enumerate(alg.filter.ssm.theta_dists):    \n",
-    "        xrange, xvals = param.get_plottable(weights=w)\n",
-    "\n",
-    "        ax[i].plot(xrange, xvals, label=f\"${syms[i]}$ - Filter {r+1:d}\")\n",
-    "\n",
-    "        ax[i].legend()"
+    "    for i, param in enumerate(alg.filter.ssm.trainable_parameters):    \n",
+    "        plot_posterior(param.cpu().numpy(), ax=ax[i], hdi_prob=\"hide\", point_estimate=None, color=colors[r])\n",
+    "        \n",
+    "        ax[i].set_title(f\"${syms[i]}$\")\n",
+    "        \n",
+    "plt.tight_layout()"
    ]
   },
   {
