--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -7,10 +7,10 @@
    },
    "source": [
     "# Stochastic volatility\n",
-    "This Notebook demos how to construct a stochastic volatility model and fit it to data. We will use a version of the precision model of G. Chacko and L. M. Viceira. `Dynamic consumption and portfolio choice with stochastic volatility in incomplete markets` given by, where we've replaced the mean reverting process with a random walk,\n",
+    "This Notebook demos how to construct a stochastic volatility model and fit it to data. We'll use the Verhulst model for the volatility process, s.t.\n",
     "\\begin{cases}\n",
-    "Y_t = \\mu + e^{-V_t} W_t, \\\\\n",
-    "dV_t = \\kappa (\\gamma - V_{t}) + \\sigma dU_t, \\\\\n",
+    "Y_t = \\mu + V_t W_t, \\\\\n",
+    "dV_t = \\kappa V_t (\\gamma - V_t) + \\sigma V_t dU_t, \\\\\n",
     "\\end{cases}\n",
     "where $\\mu, \\beta, \\gamma \\in \\mathbb{R}$, and $\\kappa, \\sigma \\in \\mathbb{R}_+$.$\\{U_t\\}$ is a Brownian motion, wheras $\\{W_t\\}$ is assumed to follow a Student's t distribution with $\\nu$ degrees of freedom. \n",
     "\n",
