--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -67,10 +67,11 @@
    "source": [
     "Next, we shall define our model. In order to do so, we must specify priors for the different parameters. Given their support, we assume that\n",
     "\\begin{cases}\n",
-    "    \\mu, \\gamma \\sim \\mathcal{N}(0, 1), \\\\\n",
+    "    \\mu \\sim \\mathcal{N}(0, 1), \\\\\n",
+    "    \\gamma \\sim \\mathcal{LN}(0, 1), \\\\\n",
     "    \\kappa \\sim \\mathcal{E}(10), \\\\\n",
     "    \\nu \\sim \\mathcal{E}(0.1), \\\\\n",
-    "    \\sigma \\sim \\mathcal{E}(5). \\\\\n",
+    "    \\sigma \\sim \\mathcal{LN}(-2, 0.5). \\\\\n",
     "\\end{cases}\n",
     "To do this, we need to import the necessary distributions."
    ]
