Minor improvement of SequentialAlgorithmState

--- a/examples/stochastic-volatility.ipynb
+++ b/examples/stochastic-volatility.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.20.0\n"
+      "0.20.4\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(16, 9))\n",
     "for i, (state, _) in enumerate(algs):\n",
-    "    ax.plot(state.get_ess().cpu().numpy(), color=colors[i])"
+    "    ax.plot(state.ess.values().cpu().numpy(), color=colors[i])"
    ]
   },
   {
