--- a/examples/nutria.ipynb
+++ b/examples/nutria.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll specify the model to use for inference. We'll use the flexible Allee model, found in .. . However, instead of considering the actual population, we'll use the logarithm."
+    "We'll use the same model as in [stoch-proc](https://github.com/tingiskhan/stoch-proc/blob/master/examples/nutria.ipynb), and thus get"
    ]
   },
   {
