Fix for variance

--- a/examples/nutria.ipynb
+++ b/examples/nutria.ipynb
@@ -142,7 +142,7 @@
     "results = list()\n",
     "for i in range(2):\n",
     "    with inf.make_context() as context:\n",
-    "        filt = APF(build_model, 250, proposal=p.LinearGaussianObservations(0))\n",
+    "        filt = APF(build_model, 250, proposal=p.LinearGaussianObservations(0, is_variance=True))\n",
     "        alg = SMC2(filt, 1_000, num_steps=5)\n",
     "\n",
     "        state = alg.fit(logged_data)\n",
@@ -263,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
